--- a/index.html
+++ b/index.html
@@ -8,6 +8,65 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <header>
+    <nav>
+      <ul>
+        <li>
+          <a href="/women">Women</a>
+        </li>
+        <li>
+          <a href="/men">Men</a>
+        </li>
+        <li>
+          <a href="/kids">Kids</a>
+        </li>
+        <li>
+          <a href="/company">Company</a>
+        </li>
+        <li>
+          <a href="/home"></a>
+          <img src="/logo.png" alt="Susparsa store logo">
+        </li>
+        <li>
+          <a href="/account">Account</a>
+        </li>
+        <li>
+          <a href="/search">Search</a>
+        </li>
+        <li>
+          <a href="/cart">Cart (0)</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section>
+      <nav>
+        <ul>
+          <li>
+            <a href="/home">Home</a>
+          </li>
+          <li>
+            <a href="/women">Women</a>
+          </li>
+          <li>
+            <a href="/item">White unisex t-shirt</a>
+          </li>
+        </ul>
+      </nav>
+      <article>
+        <img src="/white-t-shirt.png" alt="A girl in a white T-shirt">
+        <aside>
+          <h1>A girl in a white T-shirt</h1>
+          <p>CHF 40</p>
+          <p>Tax included</p>
+          <section>
+            <h2>Size</h2>
+            
+          </section>
+        </aside>
+      </article>
+    </section>
+  </main>
 </body>
 </html>
