update .html & add imgs

--- a/index.html
+++ b/index.html
@@ -1,40 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset='UTF-8'>
+  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
   <title>Susparsa Store</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel='stylesheet' href='style.css'>
 </head>
 <body>
   <header>
     <nav>
       <ul>
         <li>
-          <a href="/women">Women</a>
+          <a href='/women'>Women</a>
         </li>
         <li>
-          <a href="/men">Men</a>
+          <a href='/men'>Men</a>
         </li>
         <li>
-          <a href="/kids">Kids</a>
+          <a href='/kids'>Kids</a>
         </li>
         <li>
-          <a href="/company">Company</a>
+          <a href='/company'>Company</a>
         </li>
         <li>
-          <a href="/home"></a>
-          <img src="/logo.png" alt="Susparsa store logo">
+          <a href='/home'></a>
+          <img src='/logo.png' alt='Susparsa store logo'>
         </li>
         <li>
-          <a href="/account">Account</a>
+          <a href='/account'>Account</a>
         </li>
         <li>
-          <a href="/search">Search</a>
+          <a href='/search'>Search</a>
         </li>
         <li>
-          <a href="/cart">Cart (0)</a>
+          <a href='/cart'>Cart (0)</a>
         </li>
       </ul>
     </nav>
@@ -44,29 +44,219 @@
       <nav>
         <ul>
           <li>
-            <a href="/home">Home</a>
+            <a href='/home'>Home</a>
           </li>
           <li>
-            <a href="/women">Women</a>
+            <a href='/women'>Women</a>
           </li>
           <li>
-            <a href="/item">White unisex t-shirt</a>
+            <a href='/item'>White unisex t-shirt</a>
           </li>
         </ul>
       </nav>
       <article>
-        <img src="/white-t-shirt.png" alt="A girl in a white T-shirt">
+        <img src='/white-t-shirt.png' alt='A girl in a white T-shirt'>
         <aside>
           <h1>A girl in a white T-shirt</h1>
           <p>CHF 40</p>
           <p>Tax included</p>
-          <section>
-            <h2>Size</h2>
-            
-          </section>
+          <form action="" method="post">
+            <fieldset>
+              <legend>
+                <h2>Size</h2>
+                <label for="">
+                  <input type="radio">
+                </label>
+                <label for="">
+                  <input type="radio">
+                </label>
+                <label for="">
+                  <input type="radio">
+                </label>
+                <label for="">
+                  <input type="radio">
+                </label>
+                <label for="">
+                  <input type="radio">
+                </label>
+                <label for="">
+                  <input type="radio">
+                </label>
+              </legend>
+            </fieldset>
+            <fieldset>
+              <legend>
+                <h2>Color - White</h2>
+                <label for="">
+                  <input type="radio">
+                </label>
+                <label for="">
+                  <input type="radio">
+                </label>
+                <label for="">
+                  <input type="radio">
+                </label>
+                <label for="">
+                  <input type="radio">
+                </label>
+                <label for="">
+                  <input type="radio">
+                </label>
+                <label for="">
+                  <input type="radio">
+                </label>
+              </legend>
+            </fieldset>
+            <fieldset>
+              <legend>
+                <h2>Quantity</h2>
+                <label for="">
+                  <input type="number">
+                </label>
+              </legend>
+            </fieldset>
+            <button type="button">ADD TO CART</button>
+            <button type="submit">BUY IT NOW</button>
+          </form>
+          <p>A unisex basic garment with a loose fit. Light and comfortable to your skin.</p>
+          <p>Certification of cotton - GOTS</p>
         </aside>
+        <section>
+          <ul>
+            <li>
+              <button>
+                <span>Sizing & Fit</span>
+              </button>
+              <p>Olga is 175cm, she is wearing a size S.</p>
+            </li>
+            <li>
+              <button>
+                <span>Composition & Care</span>
+              </button>
+            </li>
+            <li>
+              <button>
+                <span>Delivery & Returns</span>
+              </button>
+            </li>
+          </ul>
+        </section>
       </article>
     </section>
+    <section>
+      <h2>You may also like</h2>
+      <ul>
+        <li>
+          <img>
+          <p></p>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+          <p></p>
+        </li>
+        <li>
+          <img>
+          <p></p>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+          <p></p>
+        </li>
+        <li>
+          <img>
+          <p></p>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+          <p></p>
+        </li>
+        <li>
+          <img>
+          <p></p>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+          <p></p>
+        </li>
+      </ul>
+    </section>
   </main>
+  <footer>
+    <nav>
+      <ul>
+        <li>
+          <h3>ABOUT</h3>
+        </li>
+        <li>
+          <address>Susparsa Store Geneva, Switzerland</address>
+        </li>
+        <li>
+          <ul>
+            <li>
+              <a href=""></a>
+              <img src="" alt="">
+            </li>
+            <li>
+              <a href=""></a>
+              <img src="" alt="">
+            </li>
+          </ul>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <h3>Company</h3>
+        </li>
+        <li>
+          <a href="">Women</a>
+        </li>
+        <li>
+          <a href="">Men</a>
+        </li>
+        <li>
+          <a href="">Kids</a>
+        </li>
+        <li>
+          <a href="">About Us</a>
+        </li>
+        <li>
+          <a href="">Our Materials</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <h3>Useful Links</h3>
+        </li>
+        <li>
+          <a href="">Privacy Policy</a>
+        </li>
+        <li>
+          <a href="">Shipping Policy</a>
+        </li>
+        <li>
+          <a href="">Return & Refund Policy</a>
+        </li>
+        <li>
+          <a href="">Terms of Service</a>
+        </li>
+        <li>
+          <a href="">Contact Us</a>
+        </li>
+      </ul>
+    </nav>
+    <small>© Susparsa 2021</small>
+  </footer>
 </body>
 </html>
